# zerodawn

./: .gitignore  CMakeLists.txt  LICENSE
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  TrailWidget.cpp  TrailWidget.hpp  main.cpp  resources.qrc
ui/shaders/: trail.frag  trail.vert
